# NewsClassificationBERT

./: .gitignore  README.md  bert_ordinal_regression.py  bert_regression.py  build_dataframe_from_excel.py  help_functions.py  helper_functions.py  main.py  main_ordinal_reg.py  main_scraping.py  pyproject.toml  scraping_functions.py
obs/: main_ordinal_reg.py
