[project]
name = "newsclassificationbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "huggingface>=0.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "torch>=2.7.1",
    "transformers>=4.53.2",
]
